refactor: update rehearsal scheduling and messaging; integrate Gemini API and improve phone normalization